# DbspProject

./: README.md  package-lock.json  package.json
api/: README.md  app.py  config.py  database_query_helper.py  generate_predicate_varies_values.py  generator.py  pyproject.toml  query_visualizer_explainer.py  sqlparser.py
frontend/src/components/App/: App.js  App.module.css
frontend/src/components/Comparator/: Comparator.js  Comparator.module.css
frontend/src/components/Input/: Input.js  Input.module.css
frontend/src/components/Output/: Output.js  Output.module.css
frontend/src/components/QueryVisualizer/: QueryVisualizer.module.css
queries/: 1.sql  2.sql  3.sql  5.sql
